using more component classes

--- a/calendar.html
+++ b/calendar.html
@@ -89,7 +89,7 @@
                 </button>
             </div>
             <!-- REPLACED: Main Content Placeholder -->
-            <div id="calendar-wrapper" class="bg-white dark:bg-gray-800 rounded-xl shadow ring-1 ring-gray-200 dark:ring-gray-700 flex flex-col overflow-hidden">
+            <div id="calendar-wrapper" class="card rounded-xl ring-1 ring-gray-200 dark:ring-gray-700 flex flex-col overflow-hidden">
                 <div id="calendar" class="flex-1 w-full h-full"></div>
             </div>
         </main>
