--- a/order-success.html
+++ b/order-success.html
@@ -14,23 +14,29 @@
     </div>
     <nav class="flex-1 px-4 py-6">
       <ul class="space-y-2">
-        <!-- ...existing code... sidebar menu items ...existing code... -->
         <li>
-          <button id="dashboard-menu-btn" class="w-full flex items-center px-3 py-2 rounded-md text-gray-700 dark:text-gray-200 hover:bg-blue-50 dark:hover:bg-gray-700 hover:text-blue-600 dark:hover:text-blue-300 font-medium transition-colors duration-150 group focus:outline-none">
-            <span class="inline-flex items-center justify-center w-6 h-6 mr-3 text-blue-500 group-hover:text-blue-600 dark:text-blue-400 dark:group-hover:text-blue-300">
-              <svg class="w-5 h-5" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
-                <path stroke-linecap="round" stroke-linejoin="round" d="M3 13h2v-2H3v2zm0 4h2v-2H3v2zm0-8h2V7H3v2zm4 8h14v-2H7v2zm0-4h14v-2H7v2zm0-6v2h14V7H7z"/>
-              </svg>
-            </span>
-            <span class="truncate">Menu</span>
-            <svg id="dashboard-menu-arrow" class="ml-auto w-4 h-4 text-gray-400 transition-transform duration-200" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
-              <path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7"/>
-            </svg>
-          </button>
-          <ul id="dashboard-submenu" class="pl-10 mt-1 space-y-1 hidden">
-            <li><a href="/index.html" class="block px-3 py-2 rounded-md text-gray-600 dark:text-gray-300 hover:bg-blue-50 dark:hover:bg-gray-700 hover:text-blue-600 dark:hover:text-blue-300 text-sm">Overview</a></li>
-            <li><a href="/product.html" class="block px-3 py-2 rounded-md text-gray-600 dark:text-gray-300 hover:bg-blue-50 dark:hover:bg-gray-700 hover:text-blue-600 dark:hover:text-blue-300 text-sm">Products</a></li>
-          </ul>
+          <a href="/index.html" class="block px-3 py-2 rounded-md font-medium text-gray-700 dark:text-gray-200 hover:bg-blue-50 dark:hover:bg-gray-700 hover:text-blue-600 dark:hover:text-blue-300 transition-colors">Dashboard</a>
+        </li>
+        <li>
+          <a href="/product.html" class="block px-3 py-2 rounded-md font-medium text-gray-700 dark:text-gray-200 hover:bg-blue-50 dark:hover:bg-gray-700 hover:text-blue-600 dark:hover:text-blue-300 transition-colors">Products</a>
+        </li>
+        <li>
+          <a href="/add-product.html" class="block px-3 py-2 rounded-md font-medium text-gray-700 dark:text-gray-200 hover:bg-blue-50 dark:hover:bg-gray-700 hover:text-blue-600 dark:hover:text-blue-300 transition-colors">Add Product</a>
+        </li>
+        <li>
+          <a href="/calendar.html" class="block px-3 py-2 rounded-md font-medium text-gray-700 dark:text-gray-200 hover:bg-blue-50 dark:hover:bg-gray-700 hover:text-blue-600 dark:hover:text-blue-300 transition-colors">Calendar</a>
+        </li>
+        <li>
+          <a href="/cart.html" class="block px-3 py-2 rounded-md font-medium text-gray-700 dark:text-gray-200 hover:bg-blue-50 dark:hover:bg-gray-700 hover:text-blue-600 dark:hover:text-blue-300 transition-colors">Cart</a>
+        </li>
+        <li>
+          <a href="/checkout.html" class="block px-3 py-2 rounded-md font-medium text-gray-700 dark:text-gray-200 hover:bg-blue-50 dark:hover:bg-gray-700 hover:text-blue-600 dark:hover:text-blue-300 transition-colors">Checkout</a>
+        </li>
+        <li>
+          <a href="/order-success.html" aria-current="page" class="block px-3 py-2 rounded-md font-medium bg-blue-50 dark:bg-gray-700 text-blue-600 dark:text-blue-300 hover:bg-blue-100 dark:hover:bg-gray-600 transition-colors">Order Placed</a>
+        </li>
+        <li>
+          <a href="/login.html" class="block px-3 py-2 rounded-md font-medium text-gray-700 dark:text-gray-200 hover:bg-blue-50 dark:hover:bg-gray-700 hover:text-blue-600 dark:hover:text-blue-300 transition-colors">Login</a>
         </li>
       </ul>
     </nav>
@@ -256,4 +262,3 @@ document.getElementById('print-receipt')?.addEventListener('click', () => window
 <script type="module" src="/src/main.js"></script>
 </body>
 </html>
-
