added single product page

--- a/products.html
+++ b/products.html
@@ -90,7 +90,7 @@
                 <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
                     <!-- Product Card 1 -->
                     <div class="card card-hoverable overflow-hidden">
-                        <div class="image-placeholder">Image</div>
+                        <div class="image-placeholder aspect-square h-40">Image</div>
                         <div class="p-4">
                             <h2 class="text-sm font-semibold text-gray-800 dark:text-gray-100">Product 1</h2>
                             <p class="mt-1 text-xs text-gray-500 dark:text-gray-400">Short descriptive text about the product.</p>
@@ -98,7 +98,7 @@
                     </div>
                     <!-- Product Card 2 -->
                     <div class="card card-hoverable overflow-hidden">
-                        <div class="image-placeholder">Image</div>
+                        <div class="image-placeholder aspect-square h-40">Image</div>
                         <div class="p-4">
                             <h2 class="text-sm font-semibold text-gray-800 dark:text-gray-100">Product 2</h2>
                             <p class="mt-1 text-xs text-gray-500 dark:text-gray-400">Short descriptive text about the product.</p>
@@ -106,7 +106,7 @@
                     </div>
                     <!-- Product Card 3 -->
                     <div class="card card-hoverable overflow-hidden">
-                        <div class="image-placeholder">Image</div>
+                        <div class="image-placeholder aspect-square h-40">Image</div>
                         <div class="p-4">
                             <h2 class="text-sm font-semibold text-gray-800 dark:text-gray-100">Product 3</h2>
                             <p class="mt-1 text-xs text-gray-500 dark:text-gray-400">Short descriptive text about the product.</p>
@@ -114,7 +114,7 @@
                     </div>
                     <!-- Product Card 4 -->
                     <div class="card card-hoverable overflow-hidden">
-                        <div class="image-placeholder">Image</div>
+                        <div class="image-placeholder aspect-square h-40">Image</div>
                         <div class="p-4">
                             <h2 class="text-sm font-semibold text-gray-800 dark:text-gray-100">Product 4</h2>
                             <p class="mt-1 text-xs text-gray-500 dark:text-gray-400">Short descriptive text about the product.</p>
@@ -122,7 +122,7 @@
                     </div>
                     <!-- Product Card 5 -->
                     <div class="card card-hoverable overflow-hidden">
-                        <div class="image-placeholder">Image</div>
+                        <div class="image-placeholder aspect-square h-40">Image</div>
                         <div class="p-4">
                             <h2 class="text-sm font-semibold text-gray-800 dark:text-gray-100">Product 5</h2>
                             <p class="mt-1 text-xs text-gray-500 dark:text-gray-400">Short descriptive text about the product.</p>
@@ -130,7 +130,7 @@
                     </div>
                     <!-- Product Card 6 -->
                     <div class="card card-hoverable overflow-hidden">
-                        <div class="image-placeholder">Image</div>
+                        <div class="image-placeholder aspect-square h-40">Image</div>
                         <div class="p-4">
                             <h2 class="text-sm font-semibold text-gray-800 dark:text-gray-100">Product 6</h2>
                             <p class="mt-1 text-xs text-gray-500 dark:text-gray-400">Short descriptive text about the product.</p>
@@ -138,7 +138,7 @@
                     </div>
                     <!-- Product Card 7 -->
                     <div class="card card-hoverable overflow-hidden">
-                        <div class="image-placeholder">Image</div>
+                        <div class="image-placeholder aspect-square h-40">Image</div>
                         <div class="p-4">
                             <h2 class="text-sm font-semibold text-gray-800 dark:text-gray-100">Product 7</h2>
                             <p class="mt-1 text-xs text-gray-500 dark:text-gray-400">Short descriptive text about the product.</p>
@@ -146,7 +146,7 @@
                     </div>
                     <!-- Product Card 8 -->
                     <div class="card card-hoverable overflow-hidden">
-                        <div class="image-placeholder">Image</div>
+                        <div class="image-placeholder aspect-square h-40">Image</div>
                         <div class="p-4">
                             <h2 class="text-sm font-semibold text-gray-800 dark:text-gray-100">Product 8</h2>
                             <p class="mt-1 text-xs text-gray-500 dark:text-gray-400">Short descriptive text about the product.</p>
@@ -154,7 +154,7 @@
                     </div>
                     <!-- Product Card 9 -->
                     <div class="card card-hoverable overflow-hidden">
-                        <div class="image-placeholder">Image</div>
+                        <div class="image-placeholder aspect-square h-40">Image</div>
                         <div class="p-4">
                             <h2 class="text-sm font-semibold text-gray-800 dark:text-gray-100">Product 9</h2>
                             <p class="mt-1 text-xs text-gray-500 dark:text-gray-400">Short descriptive text about the product.</p>
