--- a/order-success.html
+++ b/order-success.html
@@ -14,30 +14,15 @@
     </div>
     <nav class="flex-1 px-4 py-6">
       <ul class="space-y-2">
-        <li>
-          <a href="/index.html" class="block px-3 py-2 rounded-md font-medium text-gray-700 dark:text-gray-200 hover:bg-blue-50 dark:hover:bg-gray-700 hover:text-blue-600 dark:hover:text-blue-300 transition-colors">Dashboard</a>
-        </li>
-        <li>
-          <a href="/products.html" class="block px-3 py-2 rounded-md font-medium text-gray-700 dark:text-gray-200 hover:bg-blue-50 dark:hover:bg-gray-700 hover:text-blue-600 dark:hover:text-blue-300 transition-colors">Products</a>
-        </li>
-        <li>
-          <a href="/add-product.html" class="block px-3 py-2 rounded-md font-medium text-gray-700 dark:text-gray-200 hover:bg-blue-50 dark:hover:bg-gray-700 hover:text-blue-600 dark:hover:text-blue-300 transition-colors">Add Product</a>
-        </li>
-        <li>
-          <a href="/calendar.html" class="block px-3 py-2 rounded-md font-medium text-gray-700 dark:text-gray-200 hover:bg-blue-50 dark:hover:bg-gray-700 hover:text-blue-600 dark:hover:text-blue-300 transition-colors">Calendar</a>
-        </li>
-        <li>
-          <a href="/cart.html" class="block px-3 py-2 rounded-md font-medium text-gray-700 dark:text-gray-200 hover:bg-blue-50 dark:hover:bg-gray-700 hover:text-blue-600 dark:hover:text-blue-300 transition-colors">Cart</a>
-        </li>
-        <li>
-          <a href="/checkout.html" class="block px-3 py-2 rounded-md font-medium text-gray-700 dark:text-gray-200 hover:bg-blue-50 dark:hover:bg-gray-700 hover:text-blue-600 dark:hover:text-blue-300 transition-colors">Checkout</a>
-        </li>
-        <li>
-          <a href="/order-success.html" aria-current="page" class="block px-3 py-2 rounded-md font-medium bg-blue-50 dark:bg-gray-700 text-blue-600 dark:text-blue-300 hover:bg-blue-100 dark:hover:bg-gray-600 transition-colors">Order Placed</a>
-        </li>
-        <li>
-          <a href="/login.html" class="block px-3 py-2 rounded-md font-medium text-gray-700 dark:text-gray-200 hover:bg-blue-50 dark:hover:bg-gray-700 hover:text-blue-600 dark:hover:text-blue-300 transition-colors">Login</a>
-        </li>
+        <li><a href="/index.html" class="block px-3 py-2 rounded-md font-medium text-gray-700 dark:text-gray-200 hover:bg-blue-50 dark:hover:bg-gray-700 hover:text-blue-600 dark:hover:text-blue-300 transition-colors">Dashboard</a></li>
+        <li><a href="/products.html" class="block px-3 py-2 rounded-md font-medium text-gray-700 dark:text-gray-200 hover:bg-blue-50 dark:hover:bg-gray-700 hover:text-blue-600 dark:hover:text-blue-300 transition-colors">Products</a></li>
+        <li><a href="/single-product.html" class="block px-3 py-2 rounded-md font-medium text-gray-700 dark:text-gray-200 hover:bg-blue-50 dark:hover:bg-gray-700 hover:text-blue-600 dark:hover:text-blue-300 transition-colors">Single Product</a></li>
+        <li><a href="/add-product.html" class="block px-3 py-2 rounded-md font-medium text-gray-700 dark:text-gray-200 hover:bg-blue-50 dark:hover:bg-gray-700 hover:text-blue-600 dark:hover:text-blue-300 transition-colors">Add Product</a></li>
+        <li><a href="/calendar.html" class="block px-3 py-2 rounded-md font-medium text-gray-700 dark:text-gray-200 hover:bg-blue-50 dark:hover:bg-gray-700 hover:text-blue-600 dark:hover:text-blue-300 transition-colors">Calendar</a></li>
+        <li><a href="/cart.html" class="block px-3 py-2 rounded-md font-medium text-gray-700 dark:text-gray-200 hover:bg-blue-50 dark:hover:bg-gray-700 hover:text-blue-600 dark:hover:text-blue-300 transition-colors">Cart</a></li>
+        <li><a href="/checkout.html" class="block px-3 py-2 rounded-md font-medium text-gray-700 dark:text-gray-200 hover:bg-blue-50 dark:hover:bg-gray-700 hover:text-blue-600 dark:hover:text-blue-300 transition-colors">Checkout</a></li>
+        <li><a href="/order-success.html" aria-current="page" class="block px-3 py-2 rounded-md font-medium bg-blue-50 dark:bg-gray-700 text-blue-600 dark:text-blue-300 hover:bg-blue-100 dark:hover:bg-gray-600 transition-colors">Order Placed</a></li>
+        <li><a href="/login.html" class="block px-3 py-2 rounded-md font-medium text-gray-700 dark:text-gray-200 hover:bg-blue-50 dark:hover:bg-gray-700 hover:text-blue-600 dark:hover:text-blue-300 transition-colors">Login</a></li>
       </ul>
     </nav>
   </aside>
@@ -95,7 +80,7 @@
             </div>
           </div>
           <div class="mt-6 flex flex-wrap gap-3">
-            <a href="/product.html" class="rounded-full px-5 py-2.5 text-sm font-semibold border border-gray-300 dark:border-gray-600 text-gray-700 dark:text-gray-200 hover:bg-gray-50 dark:hover:bg-gray-700 transition">Continue Shopping</a>
+            <a href="/products.html" class="rounded-full px-5 py-2.5 text-sm font-semibold border border-gray-300 dark:border-gray-600 text-gray-700 dark:text-gray-200 hover:bg-gray-50 dark:hover:bg-gray-700 transition">Continue Shopping</a>
             <button id="print-receipt" class="blue-button w-auto px-6">Print receipt</button>
           </div>
         </div>
