--- a/calendar.html
+++ b/calendar.html
@@ -24,6 +24,9 @@
                     <a href="/products.html" class="block px-3 py-2 rounded-md font-medium text-gray-700 dark:text-gray-200 hover:bg-blue-50 dark:hover:bg-gray-700 hover:text-blue-600 dark:hover:text-blue-300 transition-colors">Products</a>
                 </li>
                 <li>
+                    <a href="/single-product.html" class="block px-3 py-2 rounded-md font-medium text-gray-700 dark:text-gray-200 hover:bg-blue-50 dark:hover:bg-gray-700 hover:text-blue-600 dark:hover:text-blue-300 transition-colors">Single Product</a>
+                </li>
+                <li>
                     <a href="/add-product.html" class="block px-3 py-2 rounded-md font-medium text-gray-700 dark:text-gray-200 hover:bg-blue-50 dark:hover:bg-gray-700 hover:text-blue-600 dark:hover:text-blue-300 transition-colors">Add Product</a>
                 </li>
                 <li>
