--- a/products.html
+++ b/products.html
@@ -14,15 +14,10 @@
         </div>
         <nav class="flex-1 px-4 py-6">
             <ul class="space-y-2">
-                <li>
-                    <a href="/index.html" class="block px-3 py-2 rounded-md font-medium text-gray-700 dark:text-gray-200 hover:bg-blue-50 dark:hover:bg-gray-700 hover:text-blue-600 dark:hover:text-blue-300 transition-colors">Dashboard</a>
-                </li>
-                <li>
-                    <a href="/product.html" aria-current="page" class="block px-3 py-2 rounded-md font-medium bg-blue-50 dark:bg-gray-700 text-blue-600 dark:text-blue-300 hover:bg-blue-100 dark:hover:bg-gray-600 transition-colors">Products</a>
-                </li>
-                <li>
-                    <a href="/add-product.html" class="block px-3 py-2 rounded-md font-medium text-gray-700 dark:text-gray-200 hover:bg-blue-50 dark:hover:bg-gray-700 hover:text-blue-600 dark:hover:text-blue-300 transition-colors">Add Product</a>
-                </li>
+                <li><a href="/index.html" class="block px-3 py-2 rounded-md font-medium text-gray-700 dark:text-gray-200 hover:bg-blue-50 dark:hover:bg-gray-700 hover:text-blue-600 dark:hover:text-blue-300 transition-colors">Dashboard</a></li>
+                <li><a href="/products.html" aria-current="page" class="block px-3 py-2 rounded-md font-medium bg-blue-50 dark:bg-gray-700 text-blue-600 dark:text-blue-300 hover:bg-blue-100 dark:hover:bg-gray-600 transition-colors">Products</a></li>
+                <li><a href="/single-product.html" class="block px-3 py-2 rounded-md font-medium text-gray-700 dark:text-gray-200 hover:bg-blue-50 dark:hover:bg-gray-700 hover:text-blue-600 dark:hover:text-blue-300 transition-colors">Single Product</a></li>
+                <li><a href="/add-product.html" class="block px-3 py-2 rounded-md font-medium text-gray-700 dark:text-gray-200 hover:bg-blue-50 dark:hover:bg-gray-700 hover:text-blue-600 dark:hover:text-blue-300 transition-colors">Add Product</a></li>
                 <li>
                     <a href="/calendar.html" class="block px-3 py-2 rounded-md font-medium text-gray-700 dark:text-gray-200 hover:bg-blue-50 dark:hover:bg-gray-700 hover:text-blue-600 dark:hover:text-blue-300 transition-colors">Calendar</a>
                 </li>
