--- a/home.html
+++ b/home.html
@@ -49,7 +49,7 @@
             <h1 class="text-4xl md:text-6xl font-extrabold mb-6 tracking-tight">A Center For Worship & Community</h1>
             <p class="text-lg md:text-xl mb-8 text-gray-200">Faith. Service. Education. Unity.</p>
             <div class="flex flex-col sm:flex-row gap-4 justify-center">
-                <a href="#programs" class="px-8 py-3 rounded-md bg-blue-600 hover:bg-blue-700 font-semibold shadow">Explore Programs</a>
+                <a href="#programs" class="px-8 py-3 rounded-md bg-blue-600 hover:bg-blue-700 font-semibold">Explore Programs</a>
                 <a href="/donate" class="px-8 py-3 rounded-md bg-white/20 hover:bg-white/30 border border-white/30 font-semibold">Donate</a>
             </div>
         </div>
@@ -155,9 +155,13 @@
     const hero = document.getElementById('hero');
     function handleScroll() {
         if (window.scrollY > 10) {
-            nav.classList.add('bg-black', 'dark:bg-black', 'shadow', 'text-white');
+            // Add solid black + text, remove translucent backgrounds so black shows
+            nav.classList.add('bg-black','dark:bg-black','shadow','text-white');
+            nav.classList.remove('bg-white/90','dark:bg-gray-900/90');
         } else {
-            nav.classList.remove('bg-black', 'dark:bg-black', 'shadow', 'text-white');
+            // Restore original translucent backgrounds
+            nav.classList.remove('bg-black','dark:bg-black','shadow','text-white');
+            nav.classList.add('bg-white/90','dark:bg-gray-900/90');
         }
     }
     window.addEventListener('scroll', handleScroll);
