added the main banner image

--- a/home.html
+++ b/home.html
@@ -43,8 +43,9 @@
     </nav>
 
     <!-- Hero Banner -->
-    <section id="hero" class="relative w-full h-[70vh] min-h-[480px] flex items-center justify-center">
-        <div class="absolute inset-0 bg-cover bg-center" style="background-image:url('/assets/hero-placeholder.jpg');"></div>
+    <section id="hero" class="relative w-full h-[70vh] min-h-[480px] flex items-center justify-center overflow-hidden">
+        <!-- Static image now -->
+        <div class="absolute inset-0 bg-cover bg-center" style="background-image:url('/images/main-banner.png');"></div>
         <div class="absolute inset-0 bg-black/50 dark:bg-black/60"></div>
         <div class="relative z-10 max-w-3xl mx-auto px-6 text-center text-white">
             <h1 class="text-4xl md:text-6xl font-extrabold mb-6 tracking-tight">A Center For Worship & Community</h1>
