--- a/home.html
+++ b/home.html
@@ -14,39 +14,51 @@
         })();
     </script>
     <!-- Assume Tailwind & global styles already loaded elsewhere -->
+    <style>
+      /* Removed old .dark .hero-green-layer rule */
+      .hero-overlay-layer {
+        position:absolute;
+        inset:0;
+        background:
+          linear-gradient(to bottom, rgba(0,0,0,0.35), rgba(0,0,0,0.65));
+      }
+      .dark .hero-overlay-layer {
+        background:
+          linear-gradient(to bottom, rgba(3,48,42,0.25), rgba(3,48,42,0.75)),
+          radial-gradient(circle at 40% 40%, rgba(10,97,84,0.25), rgba(3,48,42,0.55));
+      }
+    </style>
 </head>
-<body class="bg-gray-100 dark:bg-gray-900 text-gray-800 dark:text-gray-100 scroll-smooth">
+<body class="bg-gray-100 dark:bg-green-950 text-gray-800 dark:text-gray-100 scroll-smooth">
 <div class="min-h-screen flex flex-col">
     <!-- Logo Area -->
-    <div class="w-full bg-white dark:bg-gray-900 border-b border-gray-200 dark:border-gray-800">
+    <div class="w-full bg-white dark:bg-green-950 border-b border-gray-200 dark:border-green-900">
         <div class="max-w-7xl mx-auto px-6 py-4 flex items-center justify-between">
             <span class="text-xl font-bold tracking-tight">Community Masjid</span>
-            <!-- Moved Dark Mode Toggle Here -->
-            <button id="dark-mode-toggle" class="relative w-12 h-6 rounded-full bg-gray-300 dark:bg-gray-700 transition flex items-center px-1">
-                <span id="dark-mode-knob" class="w-4 h-4 bg-white dark:bg-gray-200 rounded-full shadow transform transition"></span>
+            <button id="dark-mode-toggle" class="relative w-12 h-6 rounded-full bg-gray-300 dark:bg-green-800 transition flex items-center px-1">
+                <span id="dark-mode-knob" class="w-4 h-4 bg-white dark:bg-green-200 rounded-full shadow transform transition"></span>
             </button>
         </div>
     </div>
 
     <!-- Navigation -->
-    <nav id="mainNav" class="w-full sticky top-0 z-50 transition-colors duration-300 bg-white/90 dark:bg-gray-900/90 backdrop-blur supports-[backdrop-filter]:backdrop-blur">
+    <nav id="mainNav" class="w-full sticky top-0 z-50 transition-colors duration-300 bg-white/90 dark:bg-green-950/90 backdrop-blur supports-[backdrop-filter]:backdrop-blur">
         <div class="max-w-7xl mx-auto px-6 flex items-center justify-between h-14">
             <ul class="flex items-center gap-6 text-sm font-medium">
-                <li><a href="#" class="hover:text-blue-600 dark:hover:text-blue-400">Home</a></li>
-                <li><a href="#about" class="hover:text-blue-600 dark:hover:text-blue-400">About</a></li>
-                <li><a href="#programs" class="hover:text-blue-600 dark:hover:text-blue-400">Programs</a></li>
-                <li><a href="#events" class="hover:text-blue-600 dark:hover:text-blue-400">Events</a></li>
-                <li><a href="#contact" class="hover:text-blue-600 dark:hover:text-blue-400">Contact</a></li>
+                <li><a href="#" class="hover:text-blue-600 dark:hover:text-emerald-300">Home</a></li>
+                <li><a href="#about" class="hover:text-blue-600 dark:hover:text-emerald-300">About</a></li>
+                <li><a href="#programs" class="hover:text-blue-600 dark:hover:text-emerald-300">Programs</a></li>
+                <li><a href="#events" class="hover:text-blue-600 dark:hover:text-emerald-300">Events</a></li>
+                <li><a href="#contact" class="hover:text-blue-600 dark:hover:text-emerald-300">Contact</a></li>
             </ul>
-            <!-- Removed dark mode toggle from here -->
         </div>
     </nav>
 
     <!-- Hero Banner -->
     <section id="hero" class="relative w-full h-[70vh] min-h-[480px] flex items-center justify-center overflow-hidden">
-        <!-- Static image now -->
         <div class="absolute inset-0 bg-cover bg-center" style="background-image:url('/images/main-banner.png');"></div>
-        <div class="absolute inset-0 bg-black/50 dark:bg-black/60"></div>
+        <!-- Replaced opaque overlay with lighter gradient layer -->
+        <div class="absolute inset-0 hero-overlay-layer"></div>
         <div class="relative z-10 max-w-3xl mx-auto px-6 text-center text-white">
             <h1 class="text-4xl md:text-6xl font-extrabold mb-6 tracking-tight">A Center For Worship & Community</h1>
             <p class="text-lg md:text-xl mb-8 text-gray-200">Faith. Service. Education. Unity.</p>
@@ -58,7 +70,7 @@
     </section>
 
     <!-- Content Block: About -->
-    <section id="about" class="py-20 bg-white dark:bg-gray-800 border-t border-gray-200 dark:border-gray-700">
+    <section id="about" class="py-20 bg-white dark:bg-green-900 border-t border-gray-200 dark:border-green-800">
         <div class="max-w-6xl mx-auto px-6 grid md:grid-cols-2 gap-12 items-center">
             <div>
                 <h2 class="text-3xl font-bold mb-4">Welcome</h2>
@@ -69,57 +81,57 @@
                     Scroll to explore programs, events, and ways to get involved.
                 </p>
             </div>
-            <div class="aspect-video rounded-xl overflow-hidden bg-gray-200 dark:bg-gray-700 flex items-center justify-center text-gray-500 text-sm">
+            <div class="aspect-video rounded-xl overflow-hidden bg-gray-200 dark:bg-green-800 flex items-center justify-center text-gray-500 dark:text-emerald-200 text-sm">
                 Image / Video Placeholder
             </div>
         </div>
     </section>
 
     <!-- Content Block: Programs -->
-    <section id="programs" class="py-20 bg-gray-50 dark:bg-gray-900 border-t border-gray-200 dark:border-gray-800">
+    <section id="programs" class="py-20 bg-gray-50 dark:bg-green-950 border-t border-gray-200 dark:border-green-900">
         <div class="max-w-7xl mx-auto px-6">
             <h2 class="text-3xl font-bold mb-12 text-center">Programs & Services</h2>
             <div class="grid gap-8 md:grid-cols-3">
-                <div class="p-6 rounded-xl bg-white dark:bg-gray-800 shadow">
-                    <h3 class="font-semibold mb-2">Education</h3>
-                    <p class="text-sm text-gray-600 dark:text-gray-400">Weekend school, Qur'an classes, and seminars.</p>
+                <div class="p-6 rounded-xl bg-white dark:bg-green-900 shadow border border-transparent dark:border-green-800">
+                    <h3 class="font-semibold mb-2 text-gray-800 dark:text-emerald-200">Education</h3>
+                    <p class="text-sm text-gray-600 dark:text-emerald-300/80">Weekend school, Qur'an classes, and seminars.</p>
                 </div>
-                <div class="p-6 rounded-xl bg-white dark:bg-gray-800 shadow">
-                    <h3 class="font-semibold mb-2">Youth</h3>
-                    <p class="text-sm text-gray-600 dark:text-gray-400">Mentorship, activities and leadership circles.</p>
+                <div class="p-6 rounded-xl bg-white dark:bg-green-900 shadow border border-transparent dark:border-green-800">
+                    <h3 class="font-semibold mb-2 text-gray-800 dark:text-emerald-200">Youth</h3>
+                    <p class="text-sm text-gray-600 dark:text-emerald-300/80">Mentorship, activities and leadership circles.</p>
                 </div>
-                <div class="p-6 rounded-xl bg-white dark:bg-gray-800 shadow">
-                    <h3 class="font-semibold mb-2">Community</h3>
-                    <p class="text-sm text-gray-600 dark:text-gray-400">Outreach, counseling, and social support.</p>
+                <div class="p-6 rounded-xl bg-white dark:bg-green-900 shadow border border-transparent dark:border-green-800">
+                    <h3 class="font-semibold mb-2 text-gray-800 dark:text-emerald-200">Community</h3>
+                    <p class="text-sm text-gray-600 dark:text-emerald-300/80">Outreach, counseling, and social support.</p>
                 </div>
             </div>
         </div>
     </section>
 
     <!-- Content Block: Events -->
-    <section id="events" class="py-20 bg-white dark:bg-gray-800 border-t border-gray-200 dark:border-gray-700">
+    <section id="events" class="py-20 bg-white dark:bg-green-900 border-t border-gray-200 dark:border-green-800">
         <div class="max-w-6xl mx-auto px-6">
             <h2 class="text-3xl font-bold mb-10 text-center">Upcoming Highlights</h2>
             <div class="grid md:grid-cols-2 gap-10">
-                <div class="p-6 rounded-xl bg-gray-50 dark:bg-gray-900">
+                <div class="p-6 rounded-xl bg-gray-50 dark:bg-green-950">
                     <h3 class="font-semibold mb-2">Annual Fundraising Dinner</h3>
                     <p class="text-sm text-gray-600 dark:text-gray-400 mb-4">An evening of inspiration, reflection, and community support.</p>
-                    <a href="/events" class="text-sm font-medium text-blue-600 dark:text-blue-400 hover:underline">Event Details</a>
+                    <a href="/events" class="text-sm font-medium text-blue-600 dark:text-emerald-300 hover:underline">Event Details</a>
                 </div>
-                <div class="p-6 rounded-xl bg-gray-50 dark:bg-gray-900">
+                <div class="p-6 rounded-xl bg-gray-50 dark:bg-green-950">
                     <h3 class="font-semibold mb-2">Youth Retreat</h3>
                     <p class="text-sm text-gray-600 dark:text-gray-400 mb-4">Weekend retreat fostering leadership and spiritual growth.</p>
-                    <a href="/events#youth-retreat" class="text-sm font-medium text-blue-600 dark:text-blue-400 hover:underline">Learn More</a>
+                    <a href="/events#youth-retreat" class="text-sm font-medium text-blue-600 dark:text-emerald-300 hover:underline">Learn More</a>
                 </div>
             </div>
         </div>
     </section>
 
     <!-- Content Block: Call To Action -->
-    <section id="contact" class="py-20 bg-blue-600 dark:bg-blue-700 text-white text-center border-t border-blue-500/40">
+    <section id="contact" class="py-20 bg-blue-600 dark:bg-gradient-to-br dark:from-green-900 dark:via-green-950 dark:to-green-950 text-white text-center border-t border-blue-500/40 dark:border-green-800">
         <div class="max-w-3xl mx-auto px-6">
             <h2 class="text-3xl font-bold mb-4">Get Involved</h2>
-            <p class="text-sm md:text-base mb-8 text-blue-100">Volunteer, support initiatives, and stay connected.</p>
+            <p class="text-sm md:text-base mb-8 text-blue-100 dark:text-emerald-200/70">Volunteer, support initiatives, and stay connected.</p>
             <div class="flex flex-col sm:flex-row gap-4 justify-center">
                 <a href="/donate" class="px-8 py-3 rounded-md bg-white text-blue-700 font-semibold hover:bg-blue-50">Donate</a>
                 <a href="/volunteer" class="px-8 py-3 rounded-md bg-white/15 border border-white/30 font-semibold hover:bg-white/25">Volunteer</a>
@@ -128,7 +140,7 @@
     </section>
 
     <!-- Footer -->
-    <footer class="bg-gray-900 text-gray-400 text-sm">
+    <footer class="bg-gray-900 dark:bg-green-950 text-gray-400 text-sm">
         <div class="max-w-7xl mx-auto px-6 py-12 grid gap-10 md:grid-cols-3">
             <div>
                 <h3 class="text-white font-semibold mb-2">Community Masjid</h3>
@@ -147,23 +159,21 @@
                 <p>Email: info@masjid.org</p>
             </div>
         </div>
-        <div class="border-t border-gray-800 py-4 text-center text-xs">&copy; <span id="year"></span> Community Masjid</div>
+        <div class="border-t border-gray-800 dark:border-green-800 py-4 text-center text-xs">&copy; <span id="year"></span> Community Masjid</div>
     </footer>
 </div>
 
 <script type="module">
     // Sticky nav
     const nav = document.getElementById('mainNav');
-    const hero = document.getElementById('hero');
+    // ...existing code (hero reference if needed)...
     function handleScroll() {
         if (window.scrollY > 10) {
-            // Add solid black + text, remove translucent backgrounds so black shows
-            nav.classList.add('bg-black','dark:bg-black','shadow','text-white');
-            nav.classList.remove('bg-white/90','dark:bg-gray-900/90');
+            nav.classList.add('bg-black','dark:bg-green-950','shadow','text-white');
+            nav.classList.remove('bg-white/90','dark:bg-green-950/90');
         } else {
-            // Restore original translucent backgrounds
-            nav.classList.remove('bg-black','dark:bg-black','shadow','text-white');
-            nav.classList.add('bg-white/90','dark:bg-gray-900/90');
+            nav.classList.remove('bg-black','dark:bg-green-950','shadow','text-white');
+            nav.classList.add('bg-white/90','dark:bg-green-950/90');
         }
     }
     window.addEventListener('scroll', handleScroll);
