--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <title>Home - Community Masjid</title>
+    <title>Home - European Islamic Forum Netherlands</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Early dark mode -->
     <script>
@@ -34,7 +34,7 @@
     <!-- Logo Area -->
     <div class="w-full bg-white dark:bg-green-950 border-b border-gray-200 dark:border-green-900">
         <div class="max-w-7xl mx-auto px-6 py-4 flex items-center justify-between">
-            <span class="text-xl font-bold tracking-tight">Community Masjid</span>
+            <span class="text-xl font-bold tracking-tight">European Islamic Forum Netherlands</span>
             <button id="dark-mode-toggle" class="relative w-12 h-6 rounded-full bg-gray-300 dark:bg-green-800 transition flex items-center px-1">
                 <span id="dark-mode-knob" class="w-4 h-4 bg-white dark:bg-green-200 rounded-full shadow transform transition"></span>
             </button>
@@ -60,8 +60,8 @@
         <!-- Replaced opaque overlay with lighter gradient layer -->
         <div class="absolute inset-0 hero-overlay-layer"></div>
         <div class="relative z-10 max-w-3xl mx-auto px-6 text-center text-white">
-            <h1 class="text-4xl md:text-6xl font-extrabold mb-6 tracking-tight">A Center For Worship & Community</h1>
-            <p class="text-lg md:text-xl mb-8 text-gray-200">Faith. Service. Education. Unity.</p>
+            <h1 class="text-4xl md:text-6xl font-extrabold mb-6 tracking-tight">European Islamic Forum Netherlands</h1>
+            <p class="text-lg md:text-xl mb-8 text-gray-200">A hub for faith, knowledge, community cooperation & civic engagement.</p>
             <div class="flex flex-col sm:flex-row gap-4 justify-center">
                 <a href="#programs" class="px-8 py-3 rounded-md bg-blue-600 hover:bg-blue-700 font-semibold">Explore Programs</a>
                 <a href="/donate" class="px-8 py-3 rounded-md bg-white/20 hover:bg-white/30 border border-white/30 font-semibold">Donate</a>
@@ -74,15 +74,89 @@
         <div class="max-w-6xl mx-auto px-6 grid md:grid-cols-2 gap-12 items-center">
             <div>
                 <h2 class="text-3xl font-bold mb-4">Welcome</h2>
-                <p class="text-sm leading-relaxed text-gray-600 dark:text-gray-300">
-                    Our masjid serves as a spiritual, educational, and social hub. We provide daily prayers, classes, outreach, and youth development programs in an inclusive environment.
+                <!-- Replaced about text with expanded forum description -->
+                <p class="text-sm leading-relaxed text-gray-600 dark:text-gray-300 mb-4">
+                    European Islamic Forum Netherlands is an excellent platform dedicated to understanding and supporting the religious, national, social, and ethical affairs of Muslims. This forum promotes a mission of love, free from sectarianism, hatred, and extremism. It serves as a unifying space to foster understanding, compassion, and cooperation among Muslims in Europe.
                 </p>
-                <p class="text-sm leading-relaxed mt-4 text-gray-600 dark:text-gray-300">
-                    Scroll to explore programs, events, and ways to get involved.
+                <p class="text-sm leading-relaxed text-gray-600 dark:text-gray-300 mb-4">
+                    We facilitate educational development, civic participation, inter‑community dialogue, youth empowerment, and strategic collaboration—anchored in integrity, responsibility, and shared moral values.
+                </p>
+                <p class="text-sm leading-relaxed text-gray-600 dark:text-gray-300 mb-4">
+                    Our work encourages constructive engagement with wider society, strengthening cohesion while preserving authentic spiritual and ethical identity. We nurture leadership that rejects polarization and embraces principled service.
+                </p>
+                <p class="text-sm leading-relaxed text-gray-600 dark:text-gray-300">
+                    Explore our initiatives to learn how you can contribute to a forward‑looking, inclusive European Muslim presence rooted in compassion, excellence, and unity.
                 </p>
             </div>
             <div class="aspect-video rounded-xl overflow-hidden bg-gray-200 dark:bg-green-800 flex items-center justify-center text-gray-500 dark:text-emerald-200 text-sm">
                 Image / Video Placeholder
+            </div>
+        </div>
+    </section>
+
+    <!-- New Content Block: Mission & Vision -->
+    <section id="mission" class="py-20 bg-gray-50 dark:bg-green-950 border-t border-gray-200 dark:border-green-900">
+        <div class="max-w-7xl mx-auto px-6">
+            <div class="max-w-3xl mx-auto text-center mb-14">
+                <h2 class="text-3xl font-bold mb-4">Mission & Vision</h2>
+                <p class="text-sm leading-relaxed text-gray-600 dark:text-emerald-300/80">
+                    We envision a confident, cooperative European Muslim community advancing the common good—embodying mercy, justice, ethical excellence, and cultural contribution.
+                </p>
+            </div>
+
+            <div class="grid md:grid-cols-3 gap-8 mb-16">
+                <div class="p-6 rounded-xl bg-white dark:bg-green-900 border border-gray-200 dark:border-green-800">
+                    <h3 class="font-semibold mb-2 text-gray-800 dark:text-emerald-200">Core Ethos</h3>
+                    <p class="text-sm text-gray-600 dark:text-emerald-300/80">
+                        Non‑sectarian, principled, cooperative; rejecting hatred, extremism, and division; amplifying constructive voices.
+                    </p>
+                </div>
+                <div class="p-6 rounded-xl bg-white dark:bg-green-900 border border-gray-200 dark:border-green-800">
+                    <h3 class="font-semibold mb-2 text-gray-800 dark:text-emerald-200">Strategic Focus</h3>
+                    <p class="text-sm text-gray-600 dark:text-emerald-300/80">
+                        Education, civic responsibility, social wellbeing, youth leadership, ethical governance, research & advisory.
+                    </p>
+                </div>
+                <div class="p-6 rounded-xl bg-white dark:bg-green-900 border border-gray-200 dark:border-green-800">
+                    <h3 class="font-semibold mb-2 text-gray-800 dark:text-emerald-200">Human Development</h3>
+                    <p class="text-sm text-gray-600 dark:text-emerald-300/80">
+                        Elevating character, literacy, service, emotional resilience, and collaborative problem solving.
+                    </p>
+                </div>
+            </div>
+
+            <div class="grid lg:grid-cols-2 gap-12 items-start">
+                <div class="space-y-6">
+                    <div>
+                        <h4 class="font-semibold mb-2 text-gray-800 dark:text-emerald-200">Foundational Principles</h4>
+                        <ul class="text-sm space-y-2 text-gray-600 dark:text-emerald-300/80 list-disc pl-5">
+                            <li>Unity above factionalism; mutual respect across diverse schools of thought.</li>
+                            <li>Integrity, transparency, and accountability in structure and output.</li>
+                            <li>Evidence‑informed programming aligned with ethical objectives.</li>
+                            <li>Holistic youth empowerment—spiritual, intellectual, and civic.</li>
+                            <li>Collaborative partnerships with institutions and civil society.</li>
+                        </ul>
+                    </div>
+                    <div>
+                        <h4 class="font-semibold mb-2 text-gray-800 dark:text-emerald-200">Impact Pathways</h4>
+                        <p class="text-sm text-gray-600 dark:text-emerald-300/80">
+                            We translate vision into measurable outcomes through curriculum support, advisory forums, leadership workshops, mentorship networks, research briefs, strategic convenings, and digital knowledge resources.
+                        </p>
+                    </div>
+                </div>
+                <div class="p-8 rounded-2xl bg-white dark:bg-green-900 border border-gray-200 dark:border-green-800">
+                    <h4 class="font-semibold mb-4 text-gray-800 dark:text-emerald-200">Get Engaged</h4>
+                    <p class="text-sm text-gray-600 dark:text-emerald-300/80 mb-4">
+                        Whether you are a student, educator, professional, community coordinator, or researcher—your contribution matters. Help shape initiatives that advance shared welfare and principled growth.
+                    </p>
+                    <div class="flex flex-col sm:flex-row gap-4">
+                        <a href="/volunteer" class="flex-1 text-center px-5 py-3 rounded-md bg-green-700 hover:bg-green-600 text-white text-sm font-semibold">Volunteer</a>
+                        <a href="/donate" class="flex-1 text-center px-5 py-3 rounded-md bg-white dark:bg-green-800 border border-green-300 dark:border-green-700 text-green-800 dark:text-emerald-200 hover:bg-green-50 dark:hover:bg-green-850 text-sm font-semibold">Support</a>
+                    </div>
+                    <p class="text-xs mt-5 text-gray-500 dark:text-emerald-300/50">
+                        We uphold a strict commitment to ethical compliance, transparency, and non‑partisan engagement.
+                    </p>
+                </div>
             </div>
         </div>
     </section>
@@ -128,13 +202,15 @@
     </section>
 
     <!-- Content Block: Call To Action -->
-    <section id="contact" class="py-20 bg-blue-600 dark:bg-gradient-to-br dark:from-green-900 dark:via-green-950 dark:to-green-950 text-white text-center border-t border-blue-500/40 dark:border-green-800">
+    <section id="contact" class="py-20 bg-gradient-to-br from-green-800 via-green-900 to-green-950 text-white text-center border-t border-green-800">
         <div class="max-w-3xl mx-auto px-6">
             <h2 class="text-3xl font-bold mb-4">Get Involved</h2>
-            <p class="text-sm md:text-base mb-8 text-blue-100 dark:text-emerald-200/70">Volunteer, support initiatives, and stay connected.</p>
+            <p class="text-sm md:text-base mb-8 text-green-100 dark:text-emerald-200/70">
+                Support our educational, social, and outreach initiatives—partner with the Forum.
+            </p>
             <div class="flex flex-col sm:flex-row gap-4 justify-center">
-                <a href="/donate" class="px-8 py-3 rounded-md bg-white text-blue-700 font-semibold hover:bg-blue-50">Donate</a>
-                <a href="/volunteer" class="px-8 py-3 rounded-md bg-white/15 border border-white/30 font-semibold hover:bg-white/25">Volunteer</a>
+                <a href="/donate" class="px-8 py-3 rounded-md bg-green-600 hover:bg-green-500 text-white font-semibold shadow">Donate</a>
+                <a href="/volunteer" class="px-8 py-3 rounded-md bg-white/10 border border-white/30 font-semibold text-white hover:bg-white/20 backdrop-blur">Volunteer</a>
             </div>
         </div>
     </section>
@@ -143,7 +219,7 @@
     <footer class="bg-gray-900 dark:bg-green-950 text-gray-400 text-sm">
         <div class="max-w-7xl mx-auto px-6 py-12 grid gap-10 md:grid-cols-3">
             <div>
-                <h3 class="text-white font-semibold mb-2">Community Masjid</h3>
+                <h3 class="text-white font-semibold mb-2">European Islamic Forum Netherlands</h3>
                 <p>123 Main Street<br/>City, ST 00000</p>
             </div>
             <div>
@@ -159,7 +235,7 @@
                 <p>Email: info@masjid.org</p>
             </div>
         </div>
-        <div class="border-t border-gray-800 dark:border-green-800 py-4 text-center text-xs">&copy; <span id="year"></span> Community Masjid</div>
+        <div class="border-t border-gray-800 dark:border-green-800 py-4 text-center text-xs">&copy; <span id="year"></span> European Islamic Forum Netherlands</div>
     </footer>
 </div>
 
